--- a/src/pages/upload/upload.html
+++ b/src/pages/upload/upload.html
@@ -7,7 +7,10 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Upload</ion-title>
+    <ion-title text-center>Hacer pedido</ion-title>
+    <ion-buttons end>
+      <button ion-button (click)="close()">Cerrar</button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
